--- a/backend/config.env
+++ b/backend/config.env
@@ -1,3 +1,7 @@
 PORT = 4000
 NODE_ENV = DEVELOPMENT
 DB_LOCAL_URI = mongodb://localhost:27017/store
+
+
+JWT_SECRET=MYSECRETSARESOMERANDOMWORDS
+JWT_EXPIRES_TIME=7d
