--- a/backend/config.env
+++ b/backend/config.env
@@ -5,3 +5,5 @@ DB_LOCAL_URI = mongodb://localhost:27017/store
 
 JWT_SECRET=MYSECRETSARESOMERANDOMWORDS
 JWT_EXPIRES_TIME=7d
+
+COOKIE_EXPIRES_TIME = 7d
